--- a/src/app/components/header/hader/hader.component.html
+++ b/src/app/components/header/hader/hader.component.html
@@ -11,4 +11,7 @@
     <li class="nav-item">
         <a class="nav-link" [routerLink]="['tecnologia2']">Tecnologia2</a>
     </li>
+    <li class="nav-item">
+        <a class="nav-link" [routerLink]="['producto']">Producto</a>
+    </li>
 </ul>
