--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,13 @@
 <div *ngIf="socialAuthServive.authState | async as socialUser">
-    <p>Hello, {{socialUser.name}}!</p>
+    <p>Usuario, {{socialUser.name}}!</p>
     <br>
-    <p>Your email: {{socialUser.email}}</p>
+    <p>Email: {{socialUser.email}}</p>
     <br>
     <button mat-raised-button (click)="logout()">Logout</button>
+</div>{{userGoogle.name}}
+<br>
+<div *ngIf="userGoogle != null">
+    <p>Usuario,{{nombreUsuario}} </p>
+    <br>
+    <p>Email: {{email}}</p>
 </div>
